Update the information head

--- a/All.bib
+++ b/All.bib
@@ -1,19 +1,30 @@
+% ---------------------------
+% Bibliography Reference Bank
+%        --- SPDEs-Bib       
+% ---------------------------
+% Author: chenle02 (Le Chen)
+% Emails: chenle02 AT gmail.com
+%         le.chen AT auburn.edu
+% Github: https://github.com/chenle02/SPDEs-Bib.git
+% Commit: 30c45885d9206ff298c504c7fb7001d8c308bdea
+% Date: 2023-01-27
+% ---------------------------
+
 
 % ---------------------------
-% This bibliography file --  All.bib  -- is licensed under the Creative Commons
+% 
+% Hope you find this bibliography bank useful.
+% 
+% If you need include more entries, please contact me via email or start an
+% issue from the github repo page.
+% 
+% This bibliography file -- All.bib  -- is licensed under the Creative Commons
 % Attribution-ShareAlike 4.0 International (CC BY-SA 4.0) license. You are free
 % to share and adapt the contents of this file as long as you give appropriate
 % credit and distribute any derivative works under the same license.
+% 
 % ---------------------------
 
-
-% ---------------------------
-% Author: chenle02
-% Email: chenle02 at gmail.com
-% Github Repo: https://github.com/chenle02/SPDEs-Bib.git
-% Commit hash: beec8853cc36027a404ebde3adc498742c079593
-% Date: 2023-01-27
-% ---------------------------
 
 @Article{	  .proske.ea:05:backward,
   author	= {\O ksendal, Bernt and Proske, Frank and Zhang, Tusheng},
