Add a paper from 76

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 397fd9ab5852319001518f92bbee8e0e4edbd31e
+% Commit: 78ab052d149cd0527c3f7678443ba8c867e1cbb5
 % Date: 2023-02-03
 % ---------------------------
 
@@ -3048,24 +3048,6 @@
 
 @Article{	  balan.tudor:10:stochastic,
   author	= {Balan, Raluca M. and Tudor, Ciprian A.},
-  title		= {Stochastic heat equation with multiplicative
-		  fractional-colored noise},
-  journal	= {J. Theoret. Probab.},
-  fjournal	= {Journal of Theoretical Probability},
-  volume	= {23},
-  year		= {2010},
-  number	= {3},
-  pages		= {834--870},
-  issn		= {0894-9840},
-  mrclass	= {60H15 (60G22 60H05)},
-  mrnumber	= {2679959},
-  mrreviewer	= {David Nualart},
-  doi		= {10.1007/s10959-009-0237-3},
-  url		= {https://doi.org/10.1007/s10959-009-0237-3}
-}
-
-@Article{	  balan.tudor:10:stochastic*1,
-  author	= {Balan, Raluca M. and Tudor, Ciprian A.},
   title		= {The stochastic wave equation with fractional noise: a
 		  random field approach},
   journal	= {Stochastic Process. Appl.},
@@ -3080,6 +3062,24 @@
   mrreviewer	= {Llu\'{i}s Quer-Sardanyons},
   doi		= {10.1016/j.spa.2010.08.006},
   url		= {https://doi.org/10.1016/j.spa.2010.08.006}
+}
+
+@Article{	  balan.tudor:10:stochastic*1,
+  author	= {Balan, Raluca M. and Tudor, Ciprian A.},
+  title		= {Stochastic heat equation with multiplicative
+		  fractional-colored noise},
+  journal	= {J. Theoret. Probab.},
+  fjournal	= {Journal of Theoretical Probability},
+  volume	= {23},
+  year		= {2010},
+  number	= {3},
+  pages		= {834--870},
+  issn		= {0894-9840},
+  mrclass	= {60H15 (60G22 60H05)},
+  mrnumber	= {2679959},
+  mrreviewer	= {David Nualart},
+  doi		= {10.1007/s10959-009-0237-3},
+  url		= {https://doi.org/10.1007/s10959-009-0237-3}
 }
 
 @Article{	  balan.yuan:22:spatial,
@@ -4965,6 +4965,23 @@
   mrreviewer	= {B. G. Pachpatte},
   doi		= {10.1007/978-94-015-8034-2},
   url		= {https://doi.org/10.1007/978-94-015-8034-2}
+}
+
+@Article{	  baxter.brosamler:76:energy,
+  author	= {Baxter, J. R. and Brosamler, G. A.},
+  title		= {Energy and the law of the iterated logarithm},
+  journal	= {Math. Scand.},
+  fjournal	= {Mathematica Scandinavica},
+  volume	= {38},
+  year		= {1976},
+  number	= {1},
+  pages		= {115--136},
+  issn		= {0025-5521},
+  mrclass	= {60J60 (60F15 60J55)},
+  mrnumber	= {426178},
+  mrreviewer	= {Kiyosi It\^{o}},
+  doi		= {10.7146/math.scand.a-11622},
+  url		= {https://doi.org/10.7146/math.scand.a-11622}
 }
 
 @Article{	  baxter.jain.ea:93:large,
@@ -12116,7 +12133,23 @@
   url		= {https://doi.org/10.1016/S0167-7152(99)00163-7}
 }
 
-@Article{	  chen:00:on,
+@InCollection{	  chen:00:on,
+  author	= {Chen, Xia},
+  title		= {On the law of the iterated logarithm for local times of
+		  recurrent random walks},
+  booktitle	= {High dimensional probability, {II} ({S}eattle, {WA},
+		  1999)},
+  series	= {Progr. Probab.},
+  volume	= {47},
+  pages		= {249--259},
+  publisher	= {Birkh\"{a}user Boston, Boston, MA},
+  year		= {2000},
+  mrclass	= {60F15 (60J55)},
+  mrnumber	= {1857326},
+  mrreviewer	= {Ingemar Kaj}
+}
+
+@Article{	  chen:00:on*1,
   author	= {Chen, Xia},
   title		= {On the limit laws of the second order for additive
 		  functionals of {H}arris recurrent {M}arkov chains},
@@ -12131,22 +12164,6 @@
   mrnumber	= {1736591},
   doi		= {10.1007/PL00008724},
   url		= {https://doi.org/10.1007/PL00008724}
-}
-
-@InCollection{	  chen:00:on*1,
-  author	= {Chen, Xia},
-  title		= {On the law of the iterated logarithm for local times of
-		  recurrent random walks},
-  booktitle	= {High dimensional probability, {II} ({S}eattle, {WA},
-		  1999)},
-  series	= {Progr. Probab.},
-  volume	= {47},
-  pages		= {249--259},
-  publisher	= {Birkh\"{a}user Boston, Boston, MA},
-  year		= {2000},
-  mrclass	= {60F15 (60J55)},
-  mrnumber	= {1857326},
-  mrreviewer	= {Ingemar Kaj}
 }
 
 @Article{	  chen:01:exact,
@@ -16872,25 +16889,6 @@
   author	= {Dawson, Donald A. and Etheridge, Alison M. and
 		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
 		  and Xiong, Jie},
-  title		= {Mutually catalytic branching in the plane: infinite
-		  measure states},
-  journal	= {Electron. J. Probab.},
-  fjournal	= {Electronic Journal of Probability},
-  volume	= {7},
-  year		= {2002},
-  pages		= {No. 15, 61},
-  issn		= {1083-6489},
-  mrclass	= {60K35 (60G57 60J80)},
-  mrnumber	= {1921744},
-  mrreviewer	= {Achim Klenke},
-  doi		= {10.1214/EJP.v7-114},
-  url		= {https://doi.org/10.1214/EJP.v7-114}
-}
-
-@Article{	  dawson.etheridge.ea:02:mutually*1,
-  author	= {Dawson, Donald A. and Etheridge, Alison M. and
-		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
-		  and Xiong, Jie},
   title		= {Mutually catalytic branching in the plane: finite measure
 		  states},
   journal	= {Ann. Probab.},
@@ -16905,6 +16903,25 @@
   mrreviewer	= {Roger Tribe},
   doi		= {10.1214/aop/1039548370},
   url		= {https://doi.org/10.1214/aop/1039548370}
+}
+
+@Article{	  dawson.etheridge.ea:02:mutually*1,
+  author	= {Dawson, Donald A. and Etheridge, Alison M. and
+		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
+		  and Xiong, Jie},
+  title		= {Mutually catalytic branching in the plane: infinite
+		  measure states},
+  journal	= {Electron. J. Probab.},
+  fjournal	= {Electronic Journal of Probability},
+  volume	= {7},
+  year		= {2002},
+  pages		= {No. 15, 61},
+  issn		= {1083-6489},
+  mrclass	= {60K35 (60G57 60J80)},
+  mrnumber	= {1921744},
+  mrreviewer	= {Achim Klenke},
+  doi		= {10.1214/EJP.v7-114},
+  url		= {https://doi.org/10.1214/EJP.v7-114}
 }
 
 @Article{	  dawson.feng:01:large,
@@ -23957,6 +23974,24 @@
 @Article{	  giordano.jolis.ea:20:spdes,
   author	= {Giordano, Luca M. and Jolis, Maria and Quer-Sardanyons,
 		  Llu\'{i}s},
+  title		= {S{PDE}s with linear multiplicative fractional noise:
+		  continuity in law with respect to the {H}urst index},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {130},
+  year		= {2020},
+  number	= {12},
+  pages		= {7396--7430},
+  issn		= {0304-4149},
+  mrclass	= {60B10 (60G22 60H07 60H15)},
+  mrnumber	= {4167210},
+  doi		= {10.1016/j.spa.2020.08.001},
+  url		= {https://doi.org/10.1016/j.spa.2020.08.001}
+}
+
+@Article{	  giordano.jolis.ea:20:spdes*1,
+  author	= {Giordano, Luca M. and Jolis, Maria and Quer-Sardanyons,
+		  Llu\'{i}s},
   title		= {S{PDE}s with fractional noise in space: continuity in law
 		  with respect to the {H}urst index},
   journal	= {Bernoulli},
@@ -23972,24 +24007,6 @@
   mrreviewer	= {Xiliang Fan},
   doi		= {10.3150/19-BEJ1128},
   url		= {https://doi.org/10.3150/19-BEJ1128}
-}
-
-@Article{	  giordano.jolis.ea:20:spdes*1,
-  author	= {Giordano, Luca M. and Jolis, Maria and Quer-Sardanyons,
-		  Llu\'{i}s},
-  title		= {S{PDE}s with linear multiplicative fractional noise:
-		  continuity in law with respect to the {H}urst index},
-  journal	= {Stochastic Process. Appl.},
-  fjournal	= {Stochastic Processes and their Applications},
-  volume	= {130},
-  year		= {2020},
-  number	= {12},
-  pages		= {7396--7430},
-  issn		= {0304-4149},
-  mrclass	= {60B10 (60G22 60H07 60H15)},
-  mrnumber	= {4167210},
-  doi		= {10.1016/j.spa.2020.08.001},
-  url		= {https://doi.org/10.1016/j.spa.2020.08.001}
 }
 
 @Article{	  giunti.gu.ea:19:heat,
@@ -26772,18 +26789,6 @@
   author	= {Hairer, Martin},
   title		= {Singular stochastic {PDE}s},
   booktitle	= {Proceedings of the {I}nternational {C}ongress of
-		  {M}athematicians---{S}eoul 2014. {V}ol. {IV}},
-  pages		= {49--73},
-  publisher	= {Kyung Moon Sa, Seoul},
-  year		= {2014},
-  mrclass	= {60H15 (81S20 82C28)},
-  mrnumber	= {3727602}
-}
-
-@InProceedings{	  hairer:14:singular*1,
-  author	= {Hairer, Martin},
-  title		= {Singular stochastic {PDE}s},
-  booktitle	= {Proceedings of the {I}nternational {C}ongress of
 		  {M}athematicians---{S}eoul 2014. {V}ol. 1},
   pages		= {685--709},
   publisher	= {Kyung Moon Sa, Seoul},
@@ -26791,6 +26796,18 @@
   mrclass	= {60H15 (81S20 82C28)},
   mrnumber	= {3728488},
   mrreviewer	= {Peter Karl Friz}
+}
+
+@InProceedings{	  hairer:14:singular*1,
+  author	= {Hairer, Martin},
+  title		= {Singular stochastic {PDE}s},
+  booktitle	= {Proceedings of the {I}nternational {C}ongress of
+		  {M}athematicians---{S}eoul 2014. {V}ol. {IV}},
+  pages		= {49--73},
+  publisher	= {Kyung Moon Sa, Seoul},
+  year		= {2014},
+  mrclass	= {60H15 (81S20 82C28)},
+  mrnumber	= {3727602}
 }
 
 @InCollection{	  hairer:14:solving,
