Add two papers from Gyongy

--- a/All.bib
+++ b/All.bib
@@ -6,8 +6,8 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 78ab052d149cd0527c3f7678443ba8c867e1cbb5
-% Date: 2023-02-03
+% Commit: 8f6e4429e93f51b3413b740c644cda5da36ead7e
+% Date: 2023-02-06
 % ---------------------------
 
 
@@ -7099,23 +7099,6 @@
 @Article{	  borodin.corwin.ea:15:spectral,
   author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
 		  Sasamoto, Tomohiro},
-  title		= {Spectral theory for the {$q$}-{B}oson particle system},
-  journal	= {Compos. Math.},
-  fjournal	= {Compositio Mathematica},
-  volume	= {151},
-  year		= {2015},
-  number	= {1},
-  pages		= {1--67},
-  issn		= {0010-437X},
-  mrclass	= {82B23 (05E05)},
-  mrnumber	= {3305308},
-  doi		= {10.1112/S0010437X14007532},
-  url		= {https://doi.org/10.1112/S0010437X14007532}
-}
-
-@Article{	  borodin.corwin.ea:15:spectral*1,
-  author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
-		  Sasamoto, Tomohiro},
   title		= {Spectral theory for interacting particle systems solvable
 		  by coordinate {B}ethe ansatz},
   journal	= {Comm. Math. Phys.},
@@ -7129,6 +7112,23 @@
   mrnumber	= {3385995},
   doi		= {10.1007/s00220-015-2424-7},
   url		= {https://doi.org/10.1007/s00220-015-2424-7}
+}
+
+@Article{	  borodin.corwin.ea:15:spectral*1,
+  author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
+		  Sasamoto, Tomohiro},
+  title		= {Spectral theory for the {$q$}-{B}oson particle system},
+  journal	= {Compos. Math.},
+  fjournal	= {Compositio Mathematica},
+  volume	= {151},
+  year		= {2015},
+  number	= {1},
+  pages		= {1--67},
+  issn		= {0010-437X},
+  mrclass	= {82B23 (05E05)},
+  mrnumber	= {3305308},
+  doi		= {10.1112/S0010437X14007532},
+  url		= {https://doi.org/10.1112/S0010437X14007532}
 }
 
 @Article{	  borodin.corwin.ea:16:observables,
@@ -9308,22 +9308,6 @@
 
 @Article{	  carmona.nualart:88:random,
   author	= {Carmona, Ren\'{e} and Nualart, David},
-  title		= {Random nonlinear wave equations: propagation of
-		  singularities},
-  journal	= {Ann. Probab.},
-  fjournal	= {The Annals of Probability},
-  volume	= {16},
-  year		= {1988},
-  number	= {2},
-  pages		= {730--751},
-  issn		= {0091-1798},
-  mrclass	= {60H15 (35L05 35R60)},
-  mrnumber	= {929075},
-  url		= {http://links.jstor.org/sici?sici=0091-1798(198804)16:2<730:RNWEPO>2.0.CO;2-D&origin=MSN}
-}
-
-@Article{	  carmona.nualart:88:random*1,
-  author	= {Carmona, Ren\'{e} and Nualart, David},
   title		= {Random nonlinear wave equations: smoothness of the
 		  solutions},
   journal	= {Probab. Theory Related Fields},
@@ -9338,6 +9322,22 @@
   mrreviewer	= {M. Zakai},
   doi		= {10.1007/BF00318783},
   url		= {https://doi.org/10.1007/BF00318783}
+}
+
+@Article{	  carmona.nualart:88:random*1,
+  author	= {Carmona, Ren\'{e} and Nualart, David},
+  title		= {Random nonlinear wave equations: propagation of
+		  singularities},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {16},
+  year		= {1988},
+  number	= {2},
+  pages		= {730--751},
+  issn		= {0091-1798},
+  mrclass	= {60H15 (35L05 35R60)},
+  mrnumber	= {929075},
+  url		= {http://links.jstor.org/sici?sici=0091-1798(198804)16:2<730:RNWEPO>2.0.CO;2-D&origin=MSN}
 }
 
 @Book{		  carmona.nualart:90:nonlinear,
@@ -12133,23 +12133,7 @@
   url		= {https://doi.org/10.1016/S0167-7152(99)00163-7}
 }
 
-@InCollection{	  chen:00:on,
-  author	= {Chen, Xia},
-  title		= {On the law of the iterated logarithm for local times of
-		  recurrent random walks},
-  booktitle	= {High dimensional probability, {II} ({S}eattle, {WA},
-		  1999)},
-  series	= {Progr. Probab.},
-  volume	= {47},
-  pages		= {249--259},
-  publisher	= {Birkh\"{a}user Boston, Boston, MA},
-  year		= {2000},
-  mrclass	= {60F15 (60J55)},
-  mrnumber	= {1857326},
-  mrreviewer	= {Ingemar Kaj}
-}
-
-@Article{	  chen:00:on*1,
+@Article{	  chen:00:on,
   author	= {Chen, Xia},
   title		= {On the limit laws of the second order for additive
 		  functionals of {H}arris recurrent {M}arkov chains},
@@ -12164,6 +12148,22 @@
   mrnumber	= {1736591},
   doi		= {10.1007/PL00008724},
   url		= {https://doi.org/10.1007/PL00008724}
+}
+
+@InCollection{	  chen:00:on*1,
+  author	= {Chen, Xia},
+  title		= {On the law of the iterated logarithm for local times of
+		  recurrent random walks},
+  booktitle	= {High dimensional probability, {II} ({S}eattle, {WA},
+		  1999)},
+  series	= {Progr. Probab.},
+  volume	= {47},
+  pages		= {249--259},
+  publisher	= {Birkh\"{a}user Boston, Boston, MA},
+  year		= {2000},
+  mrclass	= {60F15 (60J55)},
+  mrnumber	= {1857326},
+  mrreviewer	= {Ingemar Kaj}
 }
 
 @Article{	  chen:01:exact,
@@ -13443,17 +13443,6 @@
 }
 
 @InCollection{	  conus.joseph.ea:13:intermittency,
-  title		= {Intermittency and chaos for a nonlinear stochastic wave
-		  equation in dimension 1},
-  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
-		  and Shiu, Shang-Yuan},
-  booktitle	= {Malliavin calculus and stochastic analysis},
-  pages		= {251--279},
-  year		= {2013},
-  publisher	= {Springer}
-}
-
-@InCollection{	  conus.joseph.ea:13:intermittency*1,
   author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
 		  and Shiu, Shang-Yuan},
   title		= {Intermittency and chaos for a nonlinear stochastic wave
@@ -13469,6 +13458,17 @@
   mrreviewer	= {Stefan Tappe},
   doi		= {10.1007/978-1-4614-5906-4\_11},
   url		= {https://doi.org/10.1007/978-1-4614-5906-4_11}
+}
+
+@InCollection{	  conus.joseph.ea:13:intermittency*1,
+  title		= {Intermittency and chaos for a nonlinear stochastic wave
+		  equation in dimension 1},
+  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
+		  and Shiu, Shang-Yuan},
+  booktitle	= {Malliavin calculus and stochastic analysis},
+  pages		= {251--279},
+  year		= {2013},
+  publisher	= {Springer}
 }
 
 @Article{	  conus.joseph.ea:13:on,
@@ -18805,21 +18805,6 @@
 
 @Book{		  dunford.schwartz:88:linear,
   author	= {Dunford, Nelson and Schwartz, Jacob T.},
-  title		= {Linear operators. {P}art {I}},
-  series	= {Wiley Classics Library},
-  note		= {General theory, With the assistance of William G. Bade and
-		  Robert G. Bartle, Reprint of the 1958 original, A
-		  Wiley-Interscience Publication},
-  publisher	= {John Wiley \& Sons, Inc., New York},
-  year		= {1988},
-  pages		= {xiv+858},
-  isbn		= {0-471-60848-3},
-  mrclass	= {47-01 (46-01)},
-  mrnumber	= {1009162}
-}
-
-@Book{		  dunford.schwartz:88:linear*1,
-  author	= {Dunford, Nelson and Schwartz, Jacob T.},
   title		= {Linear operators. {P}art {II}},
   series	= {Wiley Classics Library},
   note		= {Spectral theory. Selfadjoint operators in Hilbert space,
@@ -18832,6 +18817,21 @@
   isbn		= {0-471-60847-5},
   mrclass	= {47-01 (46-01)},
   mrnumber	= {1009163}
+}
+
+@Book{		  dunford.schwartz:88:linear*1,
+  author	= {Dunford, Nelson and Schwartz, Jacob T.},
+  title		= {Linear operators. {P}art {I}},
+  series	= {Wiley Classics Library},
+  note		= {General theory, With the assistance of William G. Bade and
+		  Robert G. Bartle, Reprint of the 1958 original, A
+		  Wiley-Interscience Publication},
+  publisher	= {John Wiley \& Sons, Inc., New York},
+  year		= {1988},
+  pages		= {xiv+858},
+  isbn		= {0-471-60848-3},
+  mrclass	= {47-01 (46-01)},
+  mrnumber	= {1009162}
 }
 
 @Article{	  dunlap.gu.ea:20:fluctuations,
@@ -23974,24 +23974,6 @@
 @Article{	  giordano.jolis.ea:20:spdes,
   author	= {Giordano, Luca M. and Jolis, Maria and Quer-Sardanyons,
 		  Llu\'{i}s},
-  title		= {S{PDE}s with linear multiplicative fractional noise:
-		  continuity in law with respect to the {H}urst index},
-  journal	= {Stochastic Process. Appl.},
-  fjournal	= {Stochastic Processes and their Applications},
-  volume	= {130},
-  year		= {2020},
-  number	= {12},
-  pages		= {7396--7430},
-  issn		= {0304-4149},
-  mrclass	= {60B10 (60G22 60H07 60H15)},
-  mrnumber	= {4167210},
-  doi		= {10.1016/j.spa.2020.08.001},
-  url		= {https://doi.org/10.1016/j.spa.2020.08.001}
-}
-
-@Article{	  giordano.jolis.ea:20:spdes*1,
-  author	= {Giordano, Luca M. and Jolis, Maria and Quer-Sardanyons,
-		  Llu\'{i}s},
   title		= {S{PDE}s with fractional noise in space: continuity in law
 		  with respect to the {H}urst index},
   journal	= {Bernoulli},
@@ -24007,6 +23989,24 @@
   mrreviewer	= {Xiliang Fan},
   doi		= {10.3150/19-BEJ1128},
   url		= {https://doi.org/10.3150/19-BEJ1128}
+}
+
+@Article{	  giordano.jolis.ea:20:spdes*1,
+  author	= {Giordano, Luca M. and Jolis, Maria and Quer-Sardanyons,
+		  Llu\'{i}s},
+  title		= {S{PDE}s with linear multiplicative fractional noise:
+		  continuity in law with respect to the {H}urst index},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {130},
+  year		= {2020},
+  number	= {12},
+  pages		= {7396--7430},
+  issn		= {0304-4149},
+  mrclass	= {60B10 (60G22 60H07 60H15)},
+  mrnumber	= {4167210},
+  doi		= {10.1016/j.spa.2020.08.001},
+  url		= {https://doi.org/10.1016/j.spa.2020.08.001}
 }
 
 @Article{	  giunti.gu.ea:19:heat,
@@ -25580,6 +25580,23 @@
   url		= {https://doi.org/10.1093/biomet/93.4.989}
 }
 
+@Article{	  gyongy.krylov:81:on,
+  author	= {Gy\"{o}ngy, I. and Krylov, N. V.},
+  title		= {On stochastics equations with respect to semimartingales.
+		  {II}. {I}t\^{o} formula in {B}anach spaces},
+  journal	= {Stochastics},
+  fjournal	= {Stochastics},
+  volume	= {6},
+  year		= {1981/82},
+  number	= {3-4},
+  pages		= {153--173},
+  issn		= {0090-9491},
+  mrclass	= {60H10},
+  mrnumber	= {665398},
+  doi		= {10.1080/17442508208833202},
+  url		= {https://doi.org/10.1080/17442508208833202}
+}
+
 @Article{	  gyongy.nualart.ea:95:approximation,
   author	= {Gy\"{o}ngy, Istv\'{a}n and Nualart, David and
 		  Sanz-Sol\'{e}, Marta},
@@ -25669,6 +25686,23 @@
   mrreviewer	= {Kazuaki Taira},
   doi		= {10.1007/BF01199321},
   url		= {https://doi.org/10.1007/BF01199321}
+}
+
+@Article{	  gyongy:82:on,
+  author	= {Gy\"{o}ngy, I.},
+  title		= {On stochastic equations with respect to semimartingales.
+		  {III}},
+  journal	= {Stochastics},
+  fjournal	= {Stochastics},
+  volume	= {7},
+  year		= {1982},
+  number	= {4},
+  pages		= {231--254},
+  issn		= {0090-9491},
+  mrclass	= {60H10},
+  mrnumber	= {674448},
+  doi		= {10.1080/17442508208833220},
+  url		= {https://doi.org/10.1080/17442508208833220}
 }
 
 @Article{	  gyongy:98:lattice,
@@ -30634,25 +30668,6 @@
 @Article{	  huang.le.ea:17:large,
   author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
   title		= {Large time asymptotics for the parabolic {A}nderson model
-		  driven by spatially correlated noise},
-  journal	= {Ann. Inst. Henri Poincar\'{e} Probab. Stat.},
-  fjournal	= {Annales de l'Institut Henri Poincar\'{e} Probabilit\'{e}s
-		  et Statistiques},
-  volume	= {53},
-  year		= {2017},
-  number	= {3},
-  pages		= {1305--1340},
-  issn		= {0246-0203},
-  mrclass	= {60G15 (60F10 60H07 60H15 65M75)},
-  mrnumber	= {3689969},
-  mrreviewer	= {Xia Chen},
-  doi		= {10.1214/16-AIHP756},
-  url		= {https://doi.org/10.1214/16-AIHP756}
-}
-
-@Article{	  huang.le.ea:17:large*1,
-  author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
-  title		= {Large time asymptotics for the parabolic {A}nderson model
 		  driven by space and time correlated noise},
   journal	= {Stoch. Partial Differ. Equ. Anal. Comput.},
   fjournal	= {Stochastic Partial Differential Equations. Analysis and
@@ -30667,6 +30682,25 @@
   mrreviewer	= {Xia Chen},
   doi		= {10.1007/s40072-017-0099-0},
   url		= {https://doi.org/10.1007/s40072-017-0099-0}
+}
+
+@Article{	  huang.le.ea:17:large*1,
+  author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
+  title		= {Large time asymptotics for the parabolic {A}nderson model
+		  driven by spatially correlated noise},
+  journal	= {Ann. Inst. Henri Poincar\'{e} Probab. Stat.},
+  fjournal	= {Annales de l'Institut Henri Poincar\'{e} Probabilit\'{e}s
+		  et Statistiques},
+  volume	= {53},
+  year		= {2017},
+  number	= {3},
+  pages		= {1305--1340},
+  issn		= {0246-0203},
+  mrclass	= {60G15 (60F10 60H07 60H15 65M75)},
+  mrnumber	= {3689969},
+  mrreviewer	= {Xia Chen},
+  doi		= {10.1214/16-AIHP756},
+  url		= {https://doi.org/10.1214/16-AIHP756}
 }
 
 @Article{	  huang.le:19:spatial,
@@ -41393,7 +41427,21 @@
   url		= {https://doi.org/10.1016/j.spa.2005.10.007}
 }
 
-@Article{	  nane:06:iterated*1,
+@Book{		  nane:06:iterated*1,
+  author	= {Nane, Erkan},
+  title		= {Iterated {B}rownian motion: {L}ifetime asymptotics and
+		  isoperimetric-type inequalities},
+  note		= {Thesis (Ph.D.)--Purdue University},
+  publisher	= {ProQuest LLC, Ann Arbor, MI},
+  year		= {2006},
+  pages		= {47},
+  isbn		= {978-0542-86606-7},
+  mrclass	= {Thesis},
+  mrnumber	= {2709290},
+  url		= {http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&rft_val_fmt=info:ofi/fmt:kev:mtx:dissertation&res_dat=xri:pqdiss&rft_dat=xri:pqdiss:3232219}
+}
+
+@Article{	  nane:06:iterated*2,
   author	= {Nane, Erkan},
   title		= {Iterated {B}rownian motion in parabola-shaped domains},
   journal	= {Potential Anal.},
@@ -41410,20 +41458,6 @@
   mrreviewer	= {Endre Cs\'{a}ki},
   doi		= {10.1007/s11118-005-2611-9},
   url		= {https://doi.org/10.1007/s11118-005-2611-9}
-}
-
-@Book{		  nane:06:iterated*2,
-  author	= {Nane, Erkan},
-  title		= {Iterated {B}rownian motion: {L}ifetime asymptotics and
-		  isoperimetric-type inequalities},
-  note		= {Thesis (Ph.D.)--Purdue University},
-  publisher	= {ProQuest LLC, Ann Arbor, MI},
-  year		= {2006},
-  pages		= {47},
-  isbn		= {978-0542-86606-7},
-  mrclass	= {Thesis},
-  mrnumber	= {2709290},
-  url		= {http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&rft_val_fmt=info:ofi/fmt:kev:mtx:dissertation&res_dat=xri:pqdiss&rft_dat=xri:pqdiss:3232219}
 }
 
 @Article{	  nane:06:laws,
@@ -42717,24 +42751,6 @@
 
 @Article{	  nourdin.simon:06:on,
   author	= {Nourdin, Ivan and Simon, Thomas},
-  title		= {On the absolute continuity of one-dimensional {SDE}s
-		  driven by a fractional {B}rownian motion},
-  journal	= {Statist. Probab. Lett.},
-  fjournal	= {Statistics \& Probability Letters},
-  volume	= {76},
-  year		= {2006},
-  number	= {9},
-  pages		= {907--912},
-  issn		= {0167-7152},
-  mrclass	= {60G18 (60H10)},
-  mrnumber	= {2268434},
-  mrreviewer	= {Andreas Neuenkirch},
-  doi		= {10.1016/j.spl.2005.10.021},
-  url		= {https://doi.org/10.1016/j.spl.2005.10.021}
-}
-
-@Article{	  nourdin.simon:06:on*1,
-  author	= {Nourdin, Ivan and Simon, Thomas},
   title		= {On the absolute continuity of {L}\'{e}vy processes with
 		  drift},
   journal	= {Ann. Probab.},
@@ -42749,6 +42765,24 @@
   mrreviewer	= {Tina M. Marquardt},
   doi		= {10.1214/009117905000000620},
   url		= {https://doi.org/10.1214/009117905000000620}
+}
+
+@Article{	  nourdin.simon:06:on*1,
+  author	= {Nourdin, Ivan and Simon, Thomas},
+  title		= {On the absolute continuity of one-dimensional {SDE}s
+		  driven by a fractional {B}rownian motion},
+  journal	= {Statist. Probab. Lett.},
+  fjournal	= {Statistics \& Probability Letters},
+  volume	= {76},
+  year		= {2006},
+  number	= {9},
+  pages		= {907--912},
+  issn		= {0167-7152},
+  mrclass	= {60G18 (60H10)},
+  mrnumber	= {2268434},
+  mrreviewer	= {Andreas Neuenkirch},
+  doi		= {10.1016/j.spl.2005.10.021},
+  url		= {https://doi.org/10.1016/j.spl.2005.10.021}
 }
 
 @Article{	  nourdin.simon:07:correcting,
@@ -43671,6 +43705,21 @@
 
 @Article{	  nualart.sanz:85:malliavin,
   author	= {Nualart, D. and Sanz, M.},
+  title		= {Malliavin calculus for two-parameter processes},
+  journal	= {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
+  fjournal	= {Annales Scientifiques de l'Universit\'{e} de
+		  Clermont-Ferrand II. Probabilit\'{e}s et Applications},
+  number	= {3},
+  year		= {1985},
+  pages		= {73--86},
+  issn		= {0246-1501},
+  mrclass	= {60H15 (60G60 60H07)},
+  mrnumber	= {790724},
+  mrreviewer	= {M. Zakai}
+}
+
+@Article{	  nualart.sanz:85:malliavin*1,
+  author	= {Nualart, D. and Sanz, M.},
   title		= {Malliavin calculus for two-parameter {W}iener
 		  functionals},
   journal	= {Z. Wahrsch. Verw. Gebiete},
@@ -43686,21 +43735,6 @@
   mrreviewer	= {M. Zakai},
   doi		= {10.1007/BF00531868},
   url		= {https://doi.org/10.1007/BF00531868}
-}
-
-@Article{	  nualart.sanz:85:malliavin*1,
-  author	= {Nualart, D. and Sanz, M.},
-  title		= {Malliavin calculus for two-parameter processes},
-  journal	= {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
-  fjournal	= {Annales Scientifiques de l'Universit\'{e} de
-		  Clermont-Ferrand II. Probabilit\'{e}s et Applications},
-  number	= {3},
-  year		= {1985},
-  pages		= {73--86},
-  issn		= {0246-1501},
-  mrclass	= {60H15 (60G60 60H07)},
-  mrnumber	= {790724},
-  mrreviewer	= {M. Zakai}
 }
 
 @Article{	  nualart.sanz:89:stochastic,
@@ -50676,24 +50710,6 @@
 
 @Article{	  seppalainen:93:large,
   author	= {Sepp\"{a}l\"{a}inen, Timo},
-  title		= {Large deviations for lattice systems. {II}.
-		  {N}onstationary independent fields},
-  journal	= {Probab. Theory Related Fields},
-  fjournal	= {Probability Theory and Related Fields},
-  volume	= {97},
-  year		= {1993},
-  number	= {1-2},
-  pages		= {103--112},
-  issn		= {0178-8051},
-  mrclass	= {60F10 (60G60)},
-  mrnumber	= {1240718},
-  mrreviewer	= {Francis Comets},
-  doi		= {10.1007/BF01199314},
-  url		= {https://doi.org/10.1007/BF01199314}
-}
-
-@Article{	  seppalainen:93:large*1,
-  author	= {Sepp\"{a}l\"{a}inen, Timo},
   title		= {Large deviations for lattice systems. {I}. {P}arametrized
 		  independent fields},
   journal	= {Probab. Theory Related Fields},
@@ -50708,6 +50724,24 @@
   mrreviewer	= {Francis Comets},
   doi		= {10.1007/BF01192135},
   url		= {https://doi.org/10.1007/BF01192135}
+}
+
+@Article{	  seppalainen:93:large*1,
+  author	= {Sepp\"{a}l\"{a}inen, Timo},
+  title		= {Large deviations for lattice systems. {II}.
+		  {N}onstationary independent fields},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {97},
+  year		= {1993},
+  number	= {1-2},
+  pages		= {103--112},
+  issn		= {0178-8051},
+  mrclass	= {60F10 (60G60)},
+  mrnumber	= {1240718},
+  mrreviewer	= {Francis Comets},
+  doi		= {10.1007/BF01199314},
+  url		= {https://doi.org/10.1007/BF01199314}
 }
 
 @Article{	  seppalainen:94:large,
@@ -53174,23 +53208,6 @@
 
 @Article{	  tracy.widom:09:on,
   author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {On {ASEP} with step {B}ernoulli initial condition},
-  journal	= {J. Stat. Phys.},
-  fjournal	= {Journal of Statistical Physics},
-  volume	= {137},
-  year		= {2009},
-  number	= {5-6},
-  pages		= {825--838},
-  issn		= {0022-4715},
-  mrclass	= {60K35 (82C22)},
-  mrnumber	= {2570751},
-  mrreviewer	= {Timo Sepp\"{a}l\"{a}inen},
-  doi		= {10.1007/s10955-009-9867-1},
-  url		= {https://doi.org/10.1007/s10955-009-9867-1}
-}
-
-@Article{	  tracy.widom:09:on*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {On the distribution of a second-class particle in the
 		  asymmetric simple exclusion process},
   journal	= {J. Phys. A},
@@ -53205,6 +53222,23 @@
   mrreviewer	= {Pablo A. Ferrari},
   doi		= {10.1088/1751-8113/42/42/425002},
   url		= {https://doi.org/10.1088/1751-8113/42/42/425002}
+}
+
+@Article{	  tracy.widom:09:on*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {On {ASEP} with step {B}ernoulli initial condition},
+  journal	= {J. Stat. Phys.},
+  fjournal	= {Journal of Statistical Physics},
+  volume	= {137},
+  year		= {2009},
+  number	= {5-6},
+  pages		= {825--838},
+  issn		= {0022-4715},
+  mrclass	= {60K35 (82C22)},
+  mrnumber	= {2570751},
+  mrreviewer	= {Timo Sepp\"{a}l\"{a}inen},
+  doi		= {10.1007/s10955-009-9867-1},
+  url		= {https://doi.org/10.1007/s10955-009-9867-1}
 }
 
 @Article{	  tracy.widom:09:total,
