--- a/All.bib
+++ b/All.bib
@@ -6,8 +6,8 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 78fbedd5cc4f2492a1f71022ab9ba9b34a1698bf
-% Date: 2023-02-22
+% Commit: 5224bf421be42cc3affe6e08cce128dbb850ecd9
+% Date: 2023-03-02
 % ---------------------------
 
 
@@ -257,7 +257,7 @@
 
 @Article{	  abu-shammala.torchinsky:07:hardy-lorentz,
   author	= {Abu-Shammala, Wael and Torchinsky, Alberto},
-  title		= {The {H}ardy-{L}orentz spaces {$H^{p,q}(\Bbb R^n)$}},
+  title		= {The {H}ardy-{L}orentz spaces {$H^{p,q}(\mathbb{R}^n)$}},
   journal	= {Studia Math.},
   fjournal	= {Studia Mathematica},
   volume	= {182},
@@ -1093,8 +1093,7 @@
 
 @Article{	  allouba:13:brownian-time,
   author	= {Allouba, Hassan},
-  title		= {Brownian-time {B}rownian motion {SIE}s on {$\Bbb
-		  R_+\times\Bbb R^d$}: ultra regular direct and
+  title		= {Brownian-time {B}rownian motion {SIE}s on {$\mathbb{R}_+\times\mathbb{R}^d$}: ultra regular direct and
 		  lattice-limits solutions and fourth order {SPDE}s links},
   journal	= {Discrete Contin. Dyn. Syst.},
   fjournal	= {Discrete and Continuous Dynamical Systems. Series A},
@@ -1113,7 +1112,7 @@
 @Article{	  allouba:13:time-fractional,
   author	= {Allouba, Hassan},
   title		= {Time-fractional and memoryful {$\Delta^{2^k}$} {SIE}s on
-		  {$\Bbb{R}_+\times\Bbb{R}^d$}: how far can we push white
+		  {$\mathbb{R}_+\times\mathbb{R}^d$}: how far can we push white
 		  noise?},
   journal	= {Illinois J. Math.},
   fjournal	= {Illinois Journal of Mathematics},
@@ -9972,7 +9971,7 @@
 @Article{	  cerrai.freidlin:19:fast,
   author	= {Cerrai, Sandra and Freidlin, Mark},
   title		= {Fast flow asymptotics for stochastic incompressible
-		  viscous fluids in {$\Bbb{R}^2$} and {SPDE}s on graphs},
+		  viscous fluids in {$\mathbb{R}^2$} and {SPDE}s on graphs},
   journal	= {Probab. Theory Related Fields},
   fjournal	= {Probability Theory and Related Fields},
   volume	= {173},
@@ -10210,7 +10209,7 @@
 
 @Article{	  cerrai.xi:21:incompressible,
   author	= {Cerrai, Sandra and Xi, Guangyu},
-  title		= {Incompressible viscous fluids in {$\Bbb R^2$} and {SPDE}s
+  title		= {Incompressible viscous fluids in {$\mathbb{R}^2$} and {SPDE}s
 		  on graphs, in presence of fast advection and non smooth
 		  noise},
   journal	= {Ann. Inst. Henri Poincar\'{e} Probab. Stat.},
@@ -11326,7 +11325,7 @@
 @Article{	  chen.hu.ea:19:nonlinear,
   author	= {Chen, Le and Hu, Yaozhong and Nualart, David},
   title		= {Nonlinear stochastic time-fractional slow and fast
-		  diffusion equations on {$\Bbb R^d$}},
+		  diffusion equations on {$\mathbb{R}^d$}},
   journal	= {Stochastic Process. Appl.},
   fjournal	= {Stochastic Processes and their Applications},
   volume	= {129},
@@ -11408,7 +11407,7 @@
 @Article{	  chen.huang:19:comparison,
   author	= {Chen, Le and Huang, Jingyu},
   title		= {Comparison principle for stochastic heat equation on
-		  {$\Bbb R^d$}},
+		  {$\mathbb{R}^d$}},
   journal	= {Ann. Probab.},
   fjournal	= {The Annals of Probability},
   volume	= {47},
@@ -12528,7 +12527,7 @@
 @Article{	  chen:17:nonlinear,
   author	= {Chen, Le},
   title		= {Nonlinear stochastic time-fractional diffusion equations
-		  on {$\Bbb{R}$}: moments, {H}\"{o}lder regularity and
+		  on {$\mathbb{R}$}: moments, {H}\"{o}lder regularity and
 		  intermittency},
   journal	= {Trans. Amer. Math. Soc.},
   fjournal	= {Transactions of the American Mathematical Society},
@@ -17399,7 +17398,7 @@
   author	= {Delarue, Fran\c{c}ois and Menozzi, St\'{e}phane and
 		  Nualart, Eulalia},
   title		= {The {L}andau equation for {M}axwellian molecules and the
-		  {B}rownian motion on {${\rm SO}_N(\Bbb R)$}},
+		  {B}rownian motion on {${\rm SO}_N(\mathbb{R})$}},
   journal	= {Electron. J. Probab.},
   fjournal	= {Electronic Journal of Probability},
   volume	= {20},
