Add my published ECP 2022 paper.

--- a/All.bib
+++ b/All.bib
@@ -6,8 +6,8 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 4dec6d20aca20650ea6101b39999724c56c2ba72
-% Date: 2023-03-07
+% Commit: cc78dbc655ba53c6c900bc72b8c235b81be5df16
+% Date: 2023-03-09
 % ---------------------------
 
 
@@ -2552,6 +2552,21 @@
   mrnumber	= {4452644},
   doi		= {10.1214/21-aihp1207},
   url		= {https://doi.org/10.1214/21-aihp1207}
+}
+
+@Article{	  balan.chen.ea:22:parabolic,
+  author	= {Balan, Raluca and Chen, Le and Ma, Yiping},
+  title		= {Parabolic {A}nderson model with rough noise in space and
+		  rough initial conditions},
+  journal	= {Electron. Commun. Probab.},
+  fjournal	= {Electronic Communications in Probability},
+  volume	= {27},
+  year		= {2022},
+  pages		= {Paper No. 65, 12},
+  mrclass	= {60H15 (60H07)},
+  mrnumber	= {4529633},
+  doi		= {10.1214/22-ecp506},
+  url		= {https://doi.org/10.1214/22-ecp506}
 }
 
 @Article{	  balan.chen.ea:23:parabolic,
@@ -12166,23 +12181,7 @@
   url		= {https://doi.org/10.1016/S0167-7152(99)00163-7}
 }
 
-@InCollection{	  chen:00:on,
-  author	= {Chen, Xia},
-  title		= {On the law of the iterated logarithm for local times of
-		  recurrent random walks},
-  booktitle	= {High dimensional probability, {II} ({S}eattle, {WA},
-		  1999)},
-  series	= {Progr. Probab.},
-  volume	= {47},
-  pages		= {249--259},
-  publisher	= {Birkh\"{a}user Boston, Boston, MA},
-  year		= {2000},
-  mrclass	= {60F15 (60J55)},
-  mrnumber	= {1857326},
-  mrreviewer	= {Ingemar Kaj}
-}
-
-@Article{	  chen:00:on*1,
+@Article{	  chen:00:on,
   author	= {Chen, Xia},
   title		= {On the limit laws of the second order for additive
 		  functionals of {H}arris recurrent {M}arkov chains},
@@ -12197,6 +12196,22 @@
   mrnumber	= {1736591},
   doi		= {10.1007/PL00008724},
   url		= {https://doi.org/10.1007/PL00008724}
+}
+
+@InCollection{	  chen:00:on*1,
+  author	= {Chen, Xia},
+  title		= {On the law of the iterated logarithm for local times of
+		  recurrent random walks},
+  booktitle	= {High dimensional probability, {II} ({S}eattle, {WA},
+		  1999)},
+  series	= {Progr. Probab.},
+  volume	= {47},
+  pages		= {249--259},
+  publisher	= {Birkh\"{a}user Boston, Boston, MA},
+  year		= {2000},
+  mrclass	= {60F15 (60J55)},
+  mrnumber	= {1857326},
+  mrreviewer	= {Ingemar Kaj}
 }
 
 @Article{	  chen:01:exact,
@@ -13476,6 +13491,17 @@
 }
 
 @InCollection{	  conus.joseph.ea:13:intermittency,
+  title		= {Intermittency and chaos for a nonlinear stochastic wave
+		  equation in dimension 1},
+  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
+		  and Shiu, Shang-Yuan},
+  booktitle	= {Malliavin calculus and stochastic analysis},
+  pages		= {251--279},
+  year		= {2013},
+  publisher	= {Springer}
+}
+
+@InCollection{	  conus.joseph.ea:13:intermittency*1,
   author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
 		  and Shiu, Shang-Yuan},
   title		= {Intermittency and chaos for a nonlinear stochastic wave
@@ -13491,17 +13517,6 @@
   mrreviewer	= {Stefan Tappe},
   doi		= {10.1007/978-1-4614-5906-4\_11},
   url		= {https://doi.org/10.1007/978-1-4614-5906-4_11}
-}
-
-@InCollection{	  conus.joseph.ea:13:intermittency*1,
-  title		= {Intermittency and chaos for a nonlinear stochastic wave
-		  equation in dimension 1},
-  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
-		  and Shiu, Shang-Yuan},
-  booktitle	= {Malliavin calculus and stochastic analysis},
-  pages		= {251--279},
-  year		= {2013},
-  publisher	= {Springer}
 }
 
 @Article{	  conus.joseph.ea:13:on,
@@ -50777,24 +50792,6 @@
 
 @Article{	  seppalainen:93:large,
   author	= {Sepp\"{a}l\"{a}inen, Timo},
-  title		= {Large deviations for lattice systems. {II}.
-		  {N}onstationary independent fields},
-  journal	= {Probab. Theory Related Fields},
-  fjournal	= {Probability Theory and Related Fields},
-  volume	= {97},
-  year		= {1993},
-  number	= {1-2},
-  pages		= {103--112},
-  issn		= {0178-8051},
-  mrclass	= {60F10 (60G60)},
-  mrnumber	= {1240718},
-  mrreviewer	= {Francis Comets},
-  doi		= {10.1007/BF01199314},
-  url		= {https://doi.org/10.1007/BF01199314}
-}
-
-@Article{	  seppalainen:93:large*1,
-  author	= {Sepp\"{a}l\"{a}inen, Timo},
   title		= {Large deviations for lattice systems. {I}. {P}arametrized
 		  independent fields},
   journal	= {Probab. Theory Related Fields},
@@ -50809,6 +50806,24 @@
   mrreviewer	= {Francis Comets},
   doi		= {10.1007/BF01192135},
   url		= {https://doi.org/10.1007/BF01192135}
+}
+
+@Article{	  seppalainen:93:large*1,
+  author	= {Sepp\"{a}l\"{a}inen, Timo},
+  title		= {Large deviations for lattice systems. {II}.
+		  {N}onstationary independent fields},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {97},
+  year		= {1993},
+  number	= {1-2},
+  pages		= {103--112},
+  issn		= {0178-8051},
+  mrclass	= {60F10 (60G60)},
+  mrnumber	= {1240718},
+  mrreviewer	= {Francis Comets},
+  doi		= {10.1007/BF01199314},
+  url		= {https://doi.org/10.1007/BF01199314}
 }
 
 @Article{	  seppalainen:94:large,
